add redux-saga add redux-tools fixed the dispatch errors

--- a/anvil-web/src/routes/Login/index.module.scss
+++ b/anvil-web/src/routes/Login/index.module.scss
@@ -1,7 +1,13 @@
 .loginForm {
   width: 400px;
-  margin: 50% auto;
-  transform: translateY(-50%);
+  height: 300px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  margin: auto;
+  overflow: hidden;
 }
 
 .loginTitle {
