--- a/anvil-web/src/app.scss
+++ b/anvil-web/src/app.scss
@@ -6,6 +6,8 @@ body,
     'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   padding: 0;
+  padding-top: 1px;
+  margin-top: -1px;
   width: 100vw;
   height: 100vh;
 }
