--- a/anvil-web/src/routes/Login/index.scss
+++ b/anvil-web/src/routes/Login/index.scss
@@ -19,3 +19,14 @@
 .loginBtn {
   width: 100%;
 }
+
+.login-version {
+  background: #11AAFB;
+  color: #fff;
+  font-size: 10px;
+  margin-left: 10px;
+  padding: 2px 4px;
+  padding-right: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
