--- a/anvil-web/src/layouts/layouts.scss
+++ b/anvil-web/src/layouts/layouts.scss
@@ -18,3 +18,11 @@
   font-size: 24px;
   color: #fff;
 }
+
+.breadcrumb {
+  background-color: #fff;
+  margin-bottom: 20px;
+  height: 50px;
+  padding: 15px;
+  box-sizing: border-box;
+}
