[web] update the layouts style. update the person-center update version to the alpha.6

--- a/anvil-web/src/layouts/layouts.scss
+++ b/anvil-web/src/layouts/layouts.scss
@@ -10,13 +10,17 @@
 
 .content {
   margin: 15px;
-  padding: 15px;
+}
+
+.blank-content {
   background-color: #fff;
+  padding: 15px;
 }
 
 .logo {
   font-size: 24px;
   color: #fff;
+  float: left;
 }
 
 .breadcrumb {
@@ -25,4 +29,9 @@
   height: 50px;
   padding: 15px;
   box-sizing: border-box;
+}
+
+.header-menu {
+  float: right;
+  color: #fff;
 }
